--- a/app/scss/libs.scss
+++ b/app/scss/libs.scss
@@ -3,7 +3,7 @@
 @import 'app/libs/bootstrap/bootstrap';
 @import 'app/libs/font-awesome/font-awesome';
 
-@import 'app/libs/Vertical-Horizontal-Tabs/jquery.tabs.min';
+@import 'app/libs/Vertical-Horizontal-Tabs/jquery.tabs';
 
 @import 'app/libs/magnific-popup/magnific-popup';
 
